@@ -10,7 +10,7 @@ FREERDP_BRANCH="c9bc88d5f0fed0de03ee697dd382ba8f8a434a82"
 YATC_REPO="https://github.com/nixargh/yatc.git"
 YATC_BRANCH="dev"
 TMP_DIR="/tmp"
-TWOXCLIENT_VER="14.0.3213"
+TWOXCLIENT_VER="14.1.3479"
 TWOXCLIENT="http://www.2x.com/downloads/builds/applicationserver/${TWOXCLIENT_VER}/2XClient.deb"
 LOCALE="ru_RU.UTF-8"
 ###############################################################################
@@ -82,10 +82,10 @@ upgrade_twoxclient() {
 
 	dpkg --add-architecture i386
 
-	apt-get install -y pcscd:i386 libccid:i386 libpcsclite1:i386 libxpm4:i386 libxml2:i386 libstdc++6:i386 cryptsetup-bin libcryptsetup4 liblvm2app2.2 udisks
-
 	cd /tmp
 	wget $TWOXCLIENT -O ./2xclient.deb
+
+	dpkg -i ./2xclient.deb || apt-get -f -y install
 	dpkg -i ./2xclient.deb
 
 	echo -e "\t2X RDP client upgrade finished."
