@@ -1,6 +1,12 @@
 YATC 0.9.11:
   post-install.sh:
     1. Re-design 2xclient installation.
+    2. Bump 2xclient version to 3479.
+
+
+  uprgade.sh:
+    1. Re-design 2xclient installation.
+    2. Bump 2xclient version to 3479.
 
 YATC 0.9.10:
   yatc.py:
